--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
 <body>
     <h1>hola mundo</h1>
     <h2>bienvenido usuario nuevo</h2>
+    <p>Un texto es una composición de signos codificados <b>
+    en un sistema de escritura que forma una unidad de <b>
+    sentido. También es una composición de caracteres <b>
+    imprimibles generados por un algoritmo de cifrado <b>
+    que, aunque no tienen sentido para cualquier persona, <b>
+    sí puede ser descifrado por su destinatario original.</p>
 </body>
 </html>
